<resources>
    <string name="app_name">RescueSdkDemo</string>
    <string name="hint_type_here">Type here</string>
    <string name="btn_send">Send</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connect_pin">Connect with PIN code</string>
    <string name="disconnect">Disconnect</string>
    <string name="technician_typing">Technician is typing…</string>
    <string name="chat_prefix">You say</string>
    <string name="title_channelId">Channel ID</string>
    <string name="title_apiKey">API Key</string>
    <string name="hint_channelId">Enter your Channel ID</string>
    <string name="hint_apiKey">Enter your API key</string>
    <string name="hint_pinCode">Enter 6-digit PIN code</string>
    <!--TODO review dialog title and message strings-->
    <string name="sessionconfig_dialog_message">
        In order to start a session to a channel, the SDK needs a channel ID and an API key.
        You can configure channels and generate an API key in the Rescue Admin Center.\n
        We suggest you to store the channel ID and the API key in your code statically (see Config.java) or fetch it from your servers.\n
        For testing purposes you can enter them now, and the application will store them as a preference.</string>
    <string name="apikey_dialog_message">
        In order to start a session with a PIN code, the SDK needs an API key. You can generate an API key in the Rescue Admin Center.\n
        We suggest you to store the API key in your code statically (see Config.java) or fetch it from your servers.\n
        For testing purposes you can enter one now, and the application will store it as a preference.</string>
    <string name="sessionconfig_dialog_title">Session configuration</string>
    <string name="pin_code_entry_dialog_title">Connect with PIN code</string>
    <string name="empty_field">Fill in this field!</string>
    <string name="error_title">Error</string>
    <string name="stop_rc">Stop RC</string>
    <string name="error_no_such_channel">The channel (id: %s) doesn\'t exist!</string>
    <string name="not_set">not set</string>
    <string name="api_key_label">API key</string>
    <string name="pin_mode_label">Start with PIN code</string>
    <string name="channelid_mode_label">Start with channel ID</string>
    <string name="channelid_label">Channel ID</string>
    <string name="channel_name_company_id_mode_label">Start with channel name and company ID</string>
    <string name="channel_name_label">Channel Name</string>
    <string name="company_id_label">Company ID</string>
    <string name="settings_menu_label">Settings</string>
</resources>
